tests/bad/error_prop_not_result.oc
/// fail:  Can only use ! on Result type, got i32

def foo(): i32 => 0

def main() {
    foo()!
}